Fix current playlist and sidebar z-index

--- a/src/client/styles/components/_sidebar.sass
+++ b/src/client/styles/components/_sidebar.sass
@@ -6,7 +6,7 @@
   height: 100%
   overflow: hidden
   white-space: nowrap
-  z-index: 1
+  z-index: 3
   background-color: $white
   border-right: 1px solid darken($white, 5%)
   transition: width .15s
